/*
 Chunk Explorer, a platform for hosting and discovering Minecraft servers.
 Copyright (C) 2025 Yannic Rieger <oss@76k.io>

 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU Lesser General Public
 License as published by the Free Software Foundation; either
 version 3 of the License, or (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 Lesser General Public License for more details.

 You should have received a copy of the GNU Lesser General Public License
 along with this program; if not, write to the Free Software Foundation,
 Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
*/

syntax = "proto3";

package platformd.proxy.v1alpha1;

option go_package = "github.com/spacechunks/explorer/api/platformd/proxy/v1alpha1";

service ProxyService {
  rpc CreateListeners(CreateListenersRequest) returns (CreateListenersResponse);
  rpc DeleteListeners(DeleteListenersRequest) returns (DeleteListenersResponse);
}

message CreateListenersRequest {
  string workloadID = 1;
  string ip = 2;
}

message CreateListenersResponse {}

message DeleteListenersRequest {
  string workloadID = 1;
}

message DeleteListenersResponse {}
